# salus

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  DESIGN.md  PLAN.md  README.md  flake.nix  justfile  openapi.json  pyproject.toml  pytest_out.txt  vendor_manifest.json
.github/: dependabot.yml  release-please-config.json
design/: salus_project_prd_brief.md
docs/: analytics-spec.md  blood-glucose-pressure.md  blood-work.md  body-measurements.md  device-management.md  fasting-tracking.md  federation.md  food-meal-logging-status.md  food-meal-logging.md  habit-tracking.md  medication-tracking.md  mood-journal.md  outgoing-webhooks.md  pdf-reports.md  streaks-achievements.md  workout-templates.md
frontend/: .gitignore  eslint.config.js  package-lock.json  package.json  prettier.config.js  svelte.config.js  vite.config.ts  vitest.config.ts
migrations/: env.py
scripts/: check_entity_consistency.py  export_openapi.py  seed_data.py
tests/: conftest.py  test_achievements.py  test_admin.py  test_analytics_calculations.py  test_analytics_routes.py  test_analytics_services.py  test_api.py  test_api_dynamic.py  test_asymmetric_share.py  test_auth.py  test_auth_providers.py  test_backup.py  test_backup_ui.py  test_circadian.py  test_command_handlers.py  test_dashboard.py  test_entries.py  test_export.py  test_food.py  test_goal.py  test_habits.py  test_i18n.py  test_insight.py  test_journal.py  test_medication.py  test_metrics.py  test_mood.py  test_new_parsers.py  test_notification.py  test_onboarding.py  test_open_science.py  test_openapi_contract.py  test_parser.py  (+11 more)
(+1052 files in other folders)
