[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salus"
version = "0.1.0"
description = "A health data tracker built with FastAPI and SvelteKit"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "python-multipart",
    "pydantic-settings",
    "python-jose[cryptography]>=3.3.0",
    "authlib>=1.3.0",
    "ldap3>=2.9.1",
    "psycopg2-binary>=2.9",
    "bcrypt>=4.0",
    "alembic>=1.18.5",
    "qrcode[pil]>=7.0",
    "slowapi>=0.1.9",
]

[project.scripts]
salus = "salus.main:app"

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
